<resources>
    <string name="app_name">ABNDP9InventoryApp</string>
    <string name="empty_view_title_text">No Product Found</string>
    <string name="empty_view_subtitle_text">Please check back later!</string>
    <string name="action_insert_dummy_data">Add product</string>
    <string name="action_delete_all">Delete them all</string>
    <string name="action_delete">Delete </string>
    <string name="action_save">Save </string>
    <string name="delete">Delete </string>
    <string name="delete_dialog_msg"> Product deleted </string>
    <string name="cancel"> Cancel </string>
    <string name="editor_delete_prod_failed">Failed to delete product </string>
    <string name="editor_delete_prod_successful">Product successfully deleted </string>
    <string name="update_prod_failed">Product failed to update </string>
    <string name="update_prod_succeed">Product successfully updated </string>
    <string name="in_stock"> In Stock </string>

    <string name="inventory_activity"> Inventory </string>
    <string name="out_stock"> Out of Stock </string>

    <string name="in_discount"> In Discount </string>
    <string name="no_discount"> No Discount </string>
    <string name="unknownquery">     "Cannot query unknown uri"</string>
    <string name="name_needed">Product need a name </string>
    <string name="quantity_needed">Product need a valid quantity </string>
    <string name="price_needed">Product need a valid price </string>
    <string name="phone_needed">Product need a valid phone number </string>
    <string name="failed_row">Failed to insert row for </string>
    <string name="products">Products </string>
    <string name="name">name </string>
    <string name="price">price </string>
    <string name="type">type </string>
    <string name="discount">discount </string>
    <string name="stock">stock </string>
    <string name="quantity">quantity </string>
    <string name="phone">phone number </string>

</resources>
