<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of pets -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/name"
        android:hint="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#2B3D4D" />

    <TextView
        android:id="@+id/product"
        android:hint="@string/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="0"
        android:inputType="number"
        android:hint="@string/quantity"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD" />

    <TextView
        android:id="@+id/price"
        android:hint="@string/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:inputType="number"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD" />


    <Button
        android:id="@+id/sellProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:fontFamily="sans-serif"
        android:text="Sales"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:inputType="number"
        android:hint="@string/phone"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD" />


</LinearLayout>